# sparus-plugins

./: .gitignore  Index.tsx  package.json
tauri-plugin-lang/: Index.tsx  i18n.tsx  package.json
tauri-plugin-login/: Index.tsx  package.json
tauri-plugin-min-requirements/: Cargo.toml
tauri-plugin-min-requirements/.changes/: initial-release.md
tauri-plugin-min-requirements/examples/svelte-app/src-tauri/: tauri.conf.json
tauri-plugin-min-requirements/src/: lib.rs
tauri-plugin-min-requirements/webview-src/: index.ts
tauri-plugin-notifications/: .pnp.cjs  Index.js  Index.tsx  package.json
tauri-plugin-updater/: Cargo.toml  package.json
tauri-plugin-updater/.changes/: config.json  readme.md
tauri-plugin-updater/examples/svelte-app/: package.json
tauri-plugin-updater/examples/svelte-app/src/: App.svelte
tauri-plugin-updater/examples/svelte-app/src-tauri/: Cargo.toml
tauri-plugin-updater/examples/svelte-app/src-tauri/src/: main.rs
tauri-plugin-updater/src/: lib.rs
