[package]
name = "tauri-plugin-updater"
version = "0.0.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.57"
exclude = ["/examples", "/webview-dist", "/webview-src", "node_modules"]

[dependencies]
tauri = { version = "1.0.5" }
serde = "1.0"
thiserror = "1.0"
speedupdate = { git = "https://github.com/speedy37/speedupdate-rs" }
semver = "1.0.14"
